// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Common/Content - Ellipsis View More should ellipsis the content and show a view more link, when the length exceeds the max length 1`] = `
<pf-ellipsis-view-more
  content={[Function String]}
  maxLength={[Function Number]}
  showTextInline="false"
  tooltip="undefined"
  viewLessText={[Function String]}
  viewMoreText={[Function String]}
>
  <span>
    Lorem ipsum dol...
  </span><span
    style="display: none;"
  >
    or sit amet, consectetur adipiscing elit
  </span><div
    class="d-flex"
  >
    
    <div
      class="toggle-view-link link"
    >
       View More 
    </div>
    
  </div>
</pf-ellipsis-view-more>
`;

exports[`UI/Common/Content - Ellipsis View More should show the full content and a view less link, when we are showing full 1`] = `
<pf-ellipsis-view-more
  content={[Function String]}
  maxLength={[Function Number]}
  showFull={[Function Boolean]}
  showTextInline="false"
  tooltip="undefined"
  viewLessText={[Function String]}
  viewMoreText={[Function String]}
>
  <span>
    Lorem ipsum dol
  </span><span>
    or sit amet, consectetur adipiscing elit
  </span><div
    class="d-flex"
  >
    
    <div
      class="toggle-view-link link"
    >
       View Less 
    </div>
    
  </div>
</pf-ellipsis-view-more>
`;

exports[`UI/Common/Content - Ellipsis View More should show the full content, when its length is less than the max 1`] = `
<pf-ellipsis-view-more
  content={[Function String]}
  maxLength={[Function Number]}
  showTextInline="false"
  tooltip="undefined"
  viewLessText={[Function String]}
  viewMoreText={[Function String]}
>
  <span>
    Lorem Ipsum
  </span><span
    style="display: none;"
  />
</pf-ellipsis-view-more>
`;
